--- a/templates/index.html
+++ b/templates/index.html
@@ -6,4 +6,32 @@
 
 Home page
 
+
+<!-- <div data-aos="fade-left" class="d-inline">
+    <h2>Our Impact</h2>
+    <p>We’ve helped over 10,000 families with access to clean water...</p>
+</div>
+
+<div data-aos="fade-left" class="d-inline">
+    <h2>Our Impact</h2>
+    <p>We’ve helped over 10,000 families with access to clean water...</p>
+</div>
+<div data-aos="fade-left">
+    <h2>Our Impact</h2>
+    <p>We’ve helped over 10,000 families with access to clean water...</p>
+</div>
+<div data-aos="fade-left">
+    <h2>Our Impact</h2>
+    <p>We’ve helped over 10,000 families with access to clean water...</p>
+</div>
+<div data-aos="fade-left">
+    <h2>Our Impact</h2>
+    <p>We’ve helped over 10,000 families with access to clean water...</p>
+</div> -->
+
+<div class="justify-content-center" style="margin-left: 50px;">
+    <button style="width: 200px;" data-aos="slide-right" class="btn btn-primary">left</button> <button style="width: 200px;" data-aos="slide-left"
+        class="btn btn-primary-light">right</button>
+</div>
+
 {% endblock %}
