--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,8 @@ login
 
         <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
+    <p style="margin-top: 40px;margin-bottom: 10px;">if you don't have an account, please register</p>
+    <button type="button" class="btn btn-primary w-100"><a href="/register"></a>Register</button>
 </div>
 
 {% endblock %}
