--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,184 @@
 {% extends "base.html" %}
 {% block title %} About Page {% endblock%}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='about.css') }}">
+{% endblock %}
+
 
 {% block content %}
 
-About page
+<div class="container1 ">
+    <p class="fs-4 container fw-bold">We are a community-driven organization dedicated to bringing hope, resources, and
+        sustainable change to those in
+        need—one life, one project, one act of kindness at a time.
+    </p>
+</div>
+
+<div class="container2 container">
+    <p class="fw-bold fs-5 head">About Us</p>
+    <hr>
+    <p>Established in 2023, Nalepo is a nonprofit organization dedicated to driving sustainable,
+        community-centered impact. We work with integrity and purpose to address systemic challenges in underserved
+        regions through strategic, high-impact programs. Guided by values such as honesty, accountability, transparency,
+        and inclusivity, our team is committed to delivering meaningful change and fostering resilience across
+        generations.
+    </p>
+    <ul>
+        <h5>Our Main focus:</h5>
+        <li> Alleviating hunger through the support and development of sustainable agricultural systems</li>
+        <li>Educational empowerment for marginalized communities</li>
+        <li>Sensitization and advocacy on key healthcare issues</li>
+        <li>Youth enterprise development and economic inclusion</li>
+        <li>Promotion of gender equity and equal opportunity</li>
+    </ul>
+</div>
+
+<div class="container3">
+    <h2 class="head">Our Team</h2>
+    <!-- <h4>Founder</h4> -->
+    <div class="founder">
+        <div>
+            <img src="/static/founder.jpg" alt="">
+        </div>
+        <div>
+            <p class="" style="font-family: Georgia, 'Times New Roman', Times, serif;">Philip Kanyinke Minis is the visionary behind Nalepo Organisation, a passionate and purpose-driven individual
+                currently pursuing a Bachelor’s degree in Education at the University of Nairobi. His strong sense of
+                responsibility toward social impact and community development led to the establishment of this
+                organization in 2023. As a student leader and changemaker, he demonstrates exceptional commitment to
+                uplifting underserved communities through practical, scalable solutions in agriculture, education,
+                healthcare, youth development, and gender equity. Known for his integrity, resilience, and strategic
+                mindset, [Founder’s Name] continues to balance academic excellence with impactful service, proving that
+                leadership is not defined by age but by action. His work is grounded in compassion and a long-term
+                vision to transform lives and inspire others to do the same.
+
+            </p>
+
+            <p class="fw-bold">Founder, Nalepo Organization</p>
+        </div>
+    </div>
+    <hr style="margin-top: 50px;">
+    <div class="container py-5">
+        <div class="row justify-content-center g-4">
+      
+          <!-- Card 1 -->
+          <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/founder.jpg" class="card-img" alt="Investment">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Philip, Chairperson</h5>
+              </div>
+            </div>
+          </div>
+      
+          <!-- Card 2 -->
+          <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/danson.jpg" class="card-img" alt="Savings">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Danson, Vice Chairperson</h5>
+              </div>
+            </div>
+          </div>
+      
+          <!-- Card 3 -->
+          <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/kaigil.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Dickson, Secretary</h5>
+              </div>
+            </div>
+          </div>
+
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/esther.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Esther, Coordinator</h5>
+              </div>
+            </div>
+          </div>
+
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/nabulu.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">James, Treasurer</h5>
+              </div>
+            </div>
+          </div>
+
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/kipees.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Kipees, Treasurer</h5>
+              </div>
+            </div>
+          </div>
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/leshan.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Leshan, Member</h5>
+              </div>
+            </div>
+          </div>
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/mantaine.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Mantaine, Member</h5>
+              </div>
+            </div>
+          </div>
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/founder.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Kuyioni, Member</h5>
+              </div>
+            </div>
+          </div>
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/founder.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">William, Member</h5>
+              </div>
+            </div>
+          </div>
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/kelvin.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Kelvin, Member</h5>
+              </div>
+            </div>
+          </div>
+           <!-- Card 3 -->
+           <div class="col-md-3">
+            <div class="card solution-card text-white">
+              <img src="/static/founder.jpg" class="card-img" alt="Retirement">
+              <div class="card-img-overlay d-flex align-items-end">
+                <h5 class="card-title">Janet, Member</h5>
+              </div>
+            </div>
+          </div>
+      
+        </div>
+      </div>
+
+
+</div>
 
 {% endblock %}
