--- a/templates/animation.html
+++ b/templates/animation.html
@@ -10,11 +10,34 @@
 
 Anime page
 
-<div class="box">
+<!-- <div class="box">
     <p>Hi</p>
 </div>
 <div class="box2">
     <p>Hi</p>
+</div> -->
+
+<div class="cards">
+    <div class="card" data-aos="flip-left" data-aos-delay="100" data-aos-duration="1000">
+        card 1
+    </div>
+    <div class="card" data-aos="flip-right" data-aos-delay="100" data-aos-duration="1000">
+        card 1
+    </div>
+    <div class="card" data-aos="fade-right" data-aos-delay="100" data-aos-duration="1000">
+        card 1
+    </div>
+    <div class="card" data-aos="fade-left" data-aos-delay="100" data-aos-duration="1000">
+        card 1
+    </div>
+    <div class="card" data-aos="slide-right" data-aos-delay="100" data-aos-duration="1000">
+        card 1
+    </div>
+    <div class="card" data-aos="slide-left" data-aos-delay="100" data-aos-duration="1000">
+        card 1
+    </div>
 </div>
+
+   
 
 {% endblock %}
