--- a/static/about.css
+++ b/static/about.css
@@ -1,6 +1,6 @@
 .container1{
     height: 300px;
-    background-color: rgb(125, 15, 74);
+    background-color: #198754;
     position: relative;
     color: beige;
     text-align: center;
