--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -6,4 +6,33 @@
 
 Blog page
 
+
+<div class="container mt-5">
+    <h2 class="mb-4 text-center">Our Latest Blogs</h2>
+
+    {% for blog in blogs %}
+    <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+            <h4 class="card-title">{{ blog[1] }}</h4>
+            <h6 class="card-subtitle mb-2 text-muted">{{ blog[3] }}</h6>
+            <p class="card-text">{{ blog[2][:300] }}{% if blog[2]|length > 300 %}...{% endif %}</p>
+
+            <div class="d-flex gap-2 mt-3">
+                <a href="/blog/{{ blog[0] }}" class="btn btn-outline-primary btn-sm">Read More</a>
+
+                {% if session.get('role') == 'admin' %}
+                <a href="/edit_blog/{{ blog[0] }}" class="btn btn-warning btn-sm">Edit</a>
+                <a href="/delete_blog/{{ blog[0] }}" class="btn btn-danger btn-sm"
+                   onclick="return confirm('Are you sure you want to delete this blog?');">Delete</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    {% else %}
+    <p class="text-center text-muted">No blogs have been posted yet.</p>
+    {% endfor %}
+</div>
+
+
+
 {% endblock %}
